Update CSS to fix h1 at the top of the page

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/giphy.css">
     <title>Document</title>
 </head>
 
 <body>
     <h1>Add Your Favorite Color!</h1>
-    <div id="btnContainer">
+    <form>
         <input type="text" name="text" id="btnTextInput">
-        <button id="addBtn">Submit</button>
-        <br>
+        <input type="submit" id="addBtn"></input>
+    </form>
+
+    <div id="btnContainer">
     </div>
 
     <div id="giphyResults"></div>
