--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato|Permanent+Marker" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_package_v0.16/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon_package_v0.16/site.webmanifest">
+    <link rel="mask-icon" href="assets/images/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="assets/css/giphy.css">
-    <title>Document</title>
+    <title>Color Giphy</title>
 </head>
 
 <body>
